Fix grid-background overlap

--- a/modules/web/scss/modules/ballerina-editor.scss
+++ b/modules/web/scss/modules/ballerina-editor.scss
@@ -2830,7 +2830,6 @@
     
     .canvas-container {
         float: left;
-        height: 100%;
         position: relative;
     }
     
